# takos

./: .coderabbit.yaml  .dev.vars.example  .env  .env.example  .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  COMPLETION_REPORT.md  LICENSE-takos  NEXT_DEVELOPMENT_ROADMAP.md  README.md  REFACTOR_USER_INFO.md  _factory.ts  a.js  activityPub-e2ee.md  build.ts  deno.json  dev.ts  dockerfile  foundation.ts  fresh.config.ts  fresh.gen.ts  import_map.json  kubeConfig.yml  linkify_test.ts  main.ts  microblog-algorithm-image.md  package-lock.json  package.json  result.md  sample-render.md  schema.sql  setup.ts  start.ts  system.mmd  tailwind.config.ts  takos.js  takos.ts  temp_host_api_worker.ts  (+12 more)
.codex/: config.json
.gemini/: settings.json
.serena/: project.yml
TakosEncryptInk/: .gitignore  README.md  _main.ts  deno.json  mod.ts  test.ts  testpqc.ts  type.ts  types.ts
_docs/: package.json
_takos/: .env.example  README.md  deno.json  index.ts  main.ts
activityPub/: index.ts  logic.ts  mod.ts  model.ts  types.ts  user.ts  utils.ts  webfinger.ts
activitypub-e2ee/: abstract-protocols.md  architectural-variations.md  mls.html
app/: README.md  package-lock.json  package.json  vite.config.ts
app/client/src-tauri/: Cargo.toml  tauri.conf.json
app/client/src-tauri/capabilities/: default.json
app/client/src-tauri/src/: lib.rs  main.rs
app/shared/mls-wasm/: Cargo.toml
app/shared/mls-wasm/pkg/: mls_wasm.d.ts
app/shared/mls-wasm/src/: lib.rs  lib_clean.rs  lib_old.rs
app/shared/openmls-wasm/: Cargo.toml
app/shared/openmls-wasm/src/: lib.rs
components/: Button.tsx  Chat.jsx  ChatHeader.jsx  ChatTalk.jsx  Footer.tsx  Header.tsx  OtherMessage.tsx  SecsusPage.jsx  SendMessage.tsx  Talk.jsx  UnderMenu.tsx  User.tsx  Welcome.tsx  WelcomeMessage.tsx  chat.tsx  chatmain.tsx  welcome.tsx
dev/: dev.ts
dev2/: dev.ts
docs/: FASP.md  api-examples.md  chat.md  chat_e2ee.md  chat_ux.md  class-based-api-guide.md  crypto.md  db-separation-spec.md  deploy-workers.md  dm.md  e2ee.md  fcm.md  foundation.md  group.md  index.md  key-sharing.md  main.md  markdown-examples.md  migration-complete-report.md  multi-device-sync.md  openapi.yaml  package-lock.json  package.json  role.md  story.md  system-inbox.md  ui_ux.md  welcome.md  workers-assets-notes.md  workers-tenant.md
foundation/: test.ts
islands/: Button.tsx  ChatSend.tsx  ChatTalkContent.tsx  ChatTalkTitle.tsx  ChatTalkTitleContent.tsx  Form.tsx  FriendRequest.tsx  Fuka.tsx  HeaderButton.tsx  HeaderMenu.tsx  LginForm.jsx  Login.tsx  LoginForm.tsx  LogoutButton.jsx  PleaseLogin.jsx  ReCapcha.tsx  Register.tsx  RegisterForm.tsx  RequestFriendById.tsx  SettingList.tsx  TalkListContent.tsx  Welcome.tsx  getAddFriendKey.tsx  mainAuthForm.jsx  newLoginForm.tsx  setDefaultState.tsx  setup.tsx  talkListHeader.tsx  test.jsx
models/: activity.ts  chat.js  communities.ts  csrftoken.js  csrftoken.ts  externalUsers.ts  images.ts  (+24 more)
(+2206 files in other folders)
