[package]
name = "mls-wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
console_error_panic_hook = "0.1.7"
hex = "0.4.3"
openmls = { version = "0.7.0", features = ["js"] }
openmls_rust_crypto = "0.4.0"
openmls_basic_credential = "0.4.0"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["Window", "Crypto", "SubtleCrypto"] }
once_cell = "1.19.0"
tls_codec = { version = "0.4", features = ["derive"] }
js-sys = "0.3.77"

[lib]
crate-type = ["cdylib", "rlib"]
